Temp for Berlin  only is shown

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
     <div class="container">
 
         <nav class="navbar navbar-light bg-light">
-            <form class="form-inline" action="javascript:void(0);">
+            <form class="form-inline">
                 <input id="search-text" class="form-control mr-sm-2 search-landscape" type="search" placeholder="Search" aria-label="Search">      
             </form>
         </nav>
+        
+        <div id="sky" width="600p" height="400px" class="Clear">
+             <span  id="span-info"></span> 
+        </div>
 
 <script src="https://unpkg.com/moment" />
 <script>
