--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=“utf-8”>
     <title>The Weather</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <!-- Required meta tags -->
     <!-- Latest compiled and minified CSS -->
     <title>The weather</title>
@@ -15,16 +15,11 @@
 </head>
 
 <body>
-    <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <div class="container">
-
-        <nav class="navbar navbar-light bg-light">
-            <form class="form-inline">
-                <input id="search-text" class="form-control mr-sm-2 search-landscape" type="search" placeholder="Search" aria-label="Search">      
-            </form>
-        </nav>
+        <div>
+        	 <input id="search-text" value="Berlin">
+        </div>
         
-        <div id="sky" width="600p" height="400px" class="Clear">
+        <div id="sky" width="600px" height="400px" class="Clear">
              <span  id="span-info"></span> 
         </div>
 
