--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div>
         	 <input id="search-text" value="Berlin">
         </div>
-        
-        <div id="sky" width="600px" height="400px" class="Clear">
-             <span  id="span-info"></span> 
+ 
+        <div id="sky" width="600px" height="400px" class="">
+             
         </div>
 
 <script src="https://unpkg.com/moment" />
@@ -31,7 +31,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <!-- <script src="http://www.myersdaily.org/joseph/javascript/md5.js"></script> -->
     <script src="./js/city.js"></script>
     <script src="./js/main.js"></script>
 </body>
