--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-        <div>
-        	 <input id="search-text" value="Berlin">
+	    <div>
+	   		<input id="search-text" value="Berlin"> 
+        	<button id="btn-find" type="button" class="btn btn-primary">Find!</button>
         </div>
  
         <div id="sky" width="600px" height="400px" class="">
