Final Version for first Demo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 </head>
 
 <body>
-	    <div>
-	   		<input id="search-text" value="Berlin"> 
-        	<button id="btn-find" type="button" class="btn btn-primary">Find!</button>
-        </div>
- 
-        <div id="sky" width="600px" height="400px" class="">
+    <div class="container">
+        <input width="100%" id="search-text" value="Berlin" type="text" size="100"> 
+        <button id="btn-find" type="button" class="btn btn-primary">Find!</button>
+        <div id="sky" width="600px" height="400px" class="container">
             <!--this is  the spce where everythin goes -->
         </div>
 
