Added Country Selector for cities

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
     <div class="container">
-        <input width="100%" id="search-text" value="Berlin" type="text" size="100"> 
+        <input width="60%" id="search-text" value="Berlin" type="text" size="100"> 
         <button id="btn-find" type="button" class="btn btn-primary">Find!</button>
+        <span id="bdg-search-size" class = "badge"></span> 
+        <div id="country-selector" class="sticky-top">yxxxx</div>
         <div id="sky" width="600px" height="400px" class="container">
             <!--this is  the spce where everythin goes -->
         </div>
