Minor chanes to the search box

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Latest compiled and minified CSS -->
     <title>The weather</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <meta name="viewport"  content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -18,28 +18,28 @@
     <div class="container">
         <div class="input-group input-group-lg">
             <div class="input-group-prepend">
-              <button id="btn-find" type="button" class="btn btn-primary">Find!</button>
-              <span id="bdg-search-size" class="badge badge-light"></span>
-              <span class="input-group-text" id="inputGroup-sizing-lg">Interesting Location</span>
-              <span id="country-selector" class="sticky-top"></span>
+                <button id="btn-find" type="button" class="btn btn-primary">Find!</button>
+                <span id="bdg-search-size" class="badge badge-light"></span>
+                <span class="input-group-text" id="inputGroup-sizing-lg">Locations with the same name in </span>
+                <span id="country-selector" class="sticky-top"></span>
             </div>
             <input id="search-text" type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
-            </div>
-
-        <div id="sky" width="600px" height="400px" class="container">
-        <!--this is  the spce where the table goes -->
         </div>
 
-<script src="https://unpkg.com/moment" />
-<script>
-    moment().format();
-</script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script src="./js/city.js"></script>
-    <script src="./js/main.js"></script>
+        <div id="sky" width="600px" height="400px" class="container">
+            <!--this is  the spce where the table goes -->
+        </div>
+
+        <script src="https://unpkg.com/moment" />
+        <script>
+            moment().format();
+        </script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+        <script src="./js/city.js"></script>
+        <script src="./js/main.js"></script>
 </body>
 
 </html>
