Search method is nor striaght

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </script>
         <script src="./js/city.js"></script>
         <script src="./js/main.js"></script>
+    </div>
 </body>
 
 </html>
