--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+
 <body>
-    <div class="container">
-        <div class="input-group input-group-lg">
-            <input id="search-text" type="text" list="location-list" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
-            <span id="result"></span>
-        </div>
-        <div id="sky" width="600px" height="400px" class="container">
+    <header id="pageHeader">
+        <input id="search-text" type="text" list="location-list" class="form-control" aria-label="large" aria-describedby="inputGroup-sizing-sm" placeholder="Location name e.g Berlin"></input>
+        <span id="result"></span>
+    </header>
+    <article id="mainArticle">
+        <span id="sky" width="600px" height="400px" class="container">
             <!--this is  the spce where the table goes -->
-        </div>
+        </span>
 
         <script src="https://unpkg.com/moment" />
         <script>
@@ -34,7 +35,14 @@
         </script>
         <script src="./js/city.js"></script>
         <script src="./js/main.js"></script>
-    </div>
+    </article>
+    <nav id="mainNav">
+        <p>For later use</p>
+    </nav>
+    <div id="siteAds">
+        <h1>API</h1>
+        Open Weather App This App is using <a href="https://openweathermap.org/api">https://openweathermap.org/api</a> as a data source</div>
+    <footer id="pageFooter">(C) Copyright 2020 Michaelslab</footer>
 </body>
 
 </html>
