cleanup of the html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span id="sky" width="600px" height="400px" class="container">
             <!--this is  the spce where the table goes -->
         </span>
-        <script src="https://unpkg.com/moment" />
+        <script src="https://unpkg.com/moment" /></script>
         <script>
             moment().format();
         </script>
@@ -43,6 +43,8 @@
         <h1>API</h1>
         Open Weather App This App is using <a href="https://openweathermap.org/api">https://openweathermap.org/api</a> as a data source</div>
     <footer id="pageFooter">(C) Copyright 2020 Michaelslab</footer>
+
+    </article>
 </body>
 
 </html>
