--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span id="sky" width="600px" height="400px" class="container">
             <!--this is  the spce where the table goes -->
         </span>
-        <script src="https://unpkg.com/moment" /></script>
+        <script src="https://unpkg.com/moment"></script>
         <script>
             moment().format();
         </script>
