The test case now chaecks the datahint

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <div id="siteAds">
         <h1>API</h1>
-        Open Weather App This App is using <a href="https://openweathermap.org/api">https://openweathermap.org/api</a> as a data source</div>
+        <h2>Open Weather App</h2> This App is using <a href="https://openweathermap.org/api">https://openweathermap.org/api</a> as a data source</div>
     <footer id="pageFooter">(C) Copyright 2020 Michaelslab</footer>
 
     </article>
